--- a/SubjectRecommenderService/MS-Prediction_WebApi/MSPrediction_WebApi.csproj
+++ b/SubjectRecommenderService/MS-Prediction_WebApi/MSPrediction_WebApi.csproj
@@ -12,6 +12,8 @@
 		<!--<Compile Remove="Subject3Prediction.training.cs" />-->
 		<!--<Compile Remove="ModulePrediction.consumption.cs" />-->
 		<!--<Compile Remove="ModulePrediction.training.cs" />-->
+		<!--<Compile Remove="ModuleDependentSubjects.consumption.cs" />-->
+		<!--<Compile Remove="ModuleDependentSubjects.training.cs" />-->
 	</ItemGroup>
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.ML" Version="1.5.5" />
@@ -20,6 +22,12 @@
 		<PackageReference Include="Microsoft.ML.FastTree" Version="1.6.0" />
 	</ItemGroup>
 	<ItemGroup Label="Subject1Prediction">
+		<None Include="ModuleDependentSubjects.consumption.cs">
+		  <DependentUpon>ModuleDependentSubjects.mbconfig</DependentUpon>
+		</None>
+		<None Include="ModuleDependentSubjects.training.cs">
+		  <DependentUpon>ModuleDependentSubjects.mbconfig</DependentUpon>
+		</None>
 		<None Include="Subject1Prediction.consumption.cs">
 			<DependentUpon>Subject1Prediction.mbconfig</DependentUpon>
 		</None>
@@ -64,6 +72,18 @@
 		</None>
 		<None Include="ModulePrediction.zip">
 			<DependentUpon>ModulePrediction.mbconfig</DependentUpon>
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+	</ItemGroup>
+	<ItemGroup Label="ModuleDependentSubjects">
+		<None Include="ModuleDependentSubjects.consumption.cs">
+			<DependentUpon>ModuleDependentSubjects.mbconfig</DependentUpon>
+		</None>
+		<None Include="ModuleDependentSubjects.training.cs">
+			<DependentUpon>ModuleDependentSubjects.mbconfig</DependentUpon>
+		</None>
+		<None Include="ModuleDependentSubjects.zip">
+			<DependentUpon>ModuleDependentSubjects.mbconfig</DependentUpon>
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
 	</ItemGroup>
